--- a/_posts/2019-06-29-the-us-narrative-today.html
+++ b/_posts/2019-06-29-the-us-narrative-today.html
@@ -2702,107 +2702,107 @@ stories:
   domain: http://www.newsdemocrat.com/
   link: https://www.newsdemocrat.com/2019/06/26/federal-drug-and-weapons-bust/
 images:
-- name: trucksilo-trucksilo-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-umberto-bocc.jpg
-- name: rockingchair-rockingchair-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-neo-instinct.jpg
-- name: dragon-desert-desert-dragon-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-ww2-color.jpg
-- name: oldroad-old-road-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-spagetti-accident.jpg
-- name: rockingchair-face-2-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-clean-view.jpg
-- name: catacombs-catacombs-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-yellow-collage.jpg
-- name: rain-princess-IMG_4424.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_4424.jpg
-- name: blossombar-sand-paper-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sand-paper-file-00-00-24-99.jpg
-- name: sand-hand-sand-hand-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-granite.jpg
-- name: oldhotel-oldhotel-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-satan-red.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-gan-vogh.jpg
-- name: hollywood-building-hollywood-building-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-colored-circuits.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-sunday.jpg
-- name: locked-up-steam-lock-up-steam-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-sand-paper.jpg
-- name: oldhouse-granaryfield-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-atari-missle.jpg
-- name: bluelake-creativity-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-38-67.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
-- name: abe-lincoln-one-space-pizza-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-space-pizza-file-00-00-00-00.jpg
-- name: stories-supreme-court-statues.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-supreme-court-statues.jpg
-- name: death-valley-death-valley-national-park-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-sunday.jpg
-- name: oldcabin-oldcabin-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-clean-view.jpg
-- name: abandonedbuildings_smoking_cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_smoking_cigarette.jpg
-- name: store-on-corner-oldcabin-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-umberto-bocc.jpg
-- name: store-on-corner-store-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colorful-blocks.jpg
-- name: crow_smooth_ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smooth_ride.jpg
-- name: oldroad-old-road-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-rain.jpg
-- name: mistywoods-babyfoot-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-yellow-paper.jpg
-- name: old-granary-field-oldhouse-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-internet-numbers.jpg
-- name: subway-subway-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-electricity.jpg
-- name: razorcliff-razorcliff-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-ww2-dresden.jpg
-- name: windowmountain-window-mountain-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-yellow-collage.jpg
-- name: bluelake-blue-brush-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-00-00.jpg
-- name: border-fence-border-fence-on-hill-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-satan-red.jpg
-- name: meadowbutterfly-meadow-butterfly-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-three.jpg
-- name: oldcabin-oldcabin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin.jpg
-- name: old-cabin-oldcabin-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-diego-rivera1.jpg
-- name: mediterranean-mediterranean-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dali-three.jpg
-- name: dragon-desert-desert-dragon-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-yellow-paper.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-yellow-collage.jpg
-- name: ellis-island-ellisisland-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-ww2-dresden.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dark-soul.jpg
-- name: yuma-bank-yuma-bak-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-crafty-painting.jpg
-- name: carry-load-carryload-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-umberto-bocc.jpg
-- name: aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
-- name: christianity-christianity-under-construction-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-spagetti-accident.jpg
-- name: blossombar-smooth-ride-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-smooth-ride-file-00-00-00-00.jpg
-- name: legal-statue-legalstatue-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-colorful-blocks.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-gan-vogh.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-gan-vogh.png
-- name: legal-statue-legalstatue-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-post-modern.jpg
-- name: oldtrain-oldtrain-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-really-hot.jpg
-- name: birdhouse-birdhouse-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-satan-red.jpg
+- name: birdhouse-birdhouse-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-yellow-paper.jpg
+- name: beach-rocks-beach-rocks-currents-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-atari-asteroids.jpg
+- name: rockingchair-rockingchair-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-spagetti-accident.jpg
+- name: flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-free-woman.jpg
+- name: gears-4882162452-fa3126b38d-b-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dark-soul.jpg
+- name: server-cloud-server-racks-door-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-sunday.jpg
+- name: beach-rocks-beach-rocks-currents-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-spagetti-accident.jpg
+- name: fence-mexico-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-purple-pond.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
+- name: fence-fence-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-smooth-ride.jpg
+- name: old-gas-pumps-oldgaspumps-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-purple-storm.jpg
+- name: mediterranean-mediterranean-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dali-two.jpg
+- name: old-granary-field-granaryfield-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-aqua.jpg
+- name: old-church-oldchurch-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dark-dali.jpg
+- name: fence-mexico-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-gan-vogh.jpg
+- name: hollywood-building-hollywood-building-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-alien-goggles.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+- name: udnie-DSC_0264.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0264.jpg
+- name: legal-statue-legalstatue-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-ww2-color.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-graham-sutherland.jpg
+- name: window-window-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-post-modern.jpg
+- name: eduardo-eduardo.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-purple-pond.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purple-pond.JPG
+- name: dragon-desert-desert-dragon-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-neo-instinct.jpg
+- name: walled-garden-walled-garden-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-ww2-dresden.jpg
+- name: sand-hand-sand-hand-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-aqua.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
+- name: oldhouse-granaryfield-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dali-two.jpg
+- name: downtheline-downtheline-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crafty-painting.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
+- name: server-cloud-server-racks-clouds-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-space-pizza.jpg
+- name: downtheline-downtheline-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dali-two.jpg
+- name: locked-up-steam-lock-up-steam-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dry-skin.jpg
+- name: oldcabin-oldcabin-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crafty-painting.jpg
+- name: supreme-court-supremecourt-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-dali.jpg
+- name: stories-gears-numbers-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gears-numbers-blue.jpg
+- name: adam-smith-adam-smith-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-rain.jpg
+- name: oldbarn-oldbarn-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-alberto-giacometti.jpg
+- name: ellis-island-ellisisland-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-constitution.jpg
+- name: copper-circuit-IMG_7788.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7788.jpg
+- name: hollywood-building-hollywood-building-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit.jpg
+- name: border-crossing-bordercrossing-graham-sutherland.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-graham-sutherland.png
+- name: dc-statue-dcstatue-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-kandinsky-bv.jpg
+- name: christianity-christianity-under-construction-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-neo-instinct.jpg
+- name: aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
+- name: power-lines-power-lines-empty-space-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit-3.jpg
+- name: curtain-curtain-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-plentiful.jpg
+- name: eduardo-eduardo-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purple-pond.jpg
+- name: server-cloud-server-racks-door-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-matrix.jpg
+- name: old-door-lock-old-door-lock-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-aqua.jpg
 ---
 Diverted Plane Makes Emergency Landing At Newark Airport.&nbsp;Students, Teachers Honored At Chamber Education Banquet.&nbsp;The Creature Teacher Entertains During The Summer Reading Program.&nbsp;Trump Won't Say If Harris Will Be 'tough' Opponent.&nbsp;Do You Know What This Is?.&nbsp;She Can't Afford To Stay Alive In The US, But She Can In Canada.&nbsp;Army Of Volunteers Make Sand Devil Classic A Huge Success.&nbsp;Pope Warns Against 'lukewarm' Christians At Vatican Mass.&nbsp;
